--- a/about/index.html
+++ b/about/index.html
@@ -25,6 +25,20 @@
 <meta name="twitter:site" content="@PSUStevens"/>
 
   
+  
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-149142929-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+
 
   <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
@@ -244,9 +258,11 @@
 
 <p>I am finally getting around to learning how to use <a href="https://www.github.com">GitHub</a>.  In fact, this entire blog site is hosted on GitHub.  You can find my contributions <a href="https://github.com/psustevens">over here</a>.  I am using a framework known as <a href="https://github.com/gohugoio/hugo">Hugo</a> for developing my site.  I&rsquo;m using the <a href="https://github.com/pacollins/hugo-future-imperfect-slim">hugo-future-imperfect-slim</a> theme.</p>
 
-<p>That&rsquo;s all for now.  I&rsquo;ll sprinkle a few more posts about myself later on.</p>
+<p>That&rsquo;s all for now.  I&rsquo;ll sprinkle a few more posts about myself in the future.</p>
 
 <p>Thanks for reading!</p>
+
+<p>PS:  I also need to thank my beautiful wife, Laura, for sticking it out with me.  Without her I wouldn&rsquo;t be where I am today in my career and in life in general.  We wouldn&rsquo;t have been able to do what we have done so far in life.  It&rsquo;s fun to think about what still lies ahead for us.</p>
 
           </div>
         </article>
@@ -389,6 +405,17 @@
 
 
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-149142929-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 
 
     </div>
