Updated the vExpert badge
I also made some minor changes to the about page.

--- a/about/index.html
+++ b/about/index.html
@@ -230,16 +230,16 @@ if (!doNotTrack) {
 <h3 id="author">Author</h3>
 <p>I am originally from Pittsburgh, PA, but I now live in New England.  Despite living in New England, I can still speak native <a href="http://www.pittsburghese.com/">&ldquo;Pittsburghese&rdquo;</a>.  If you don't know what that means don't fret.  I speak fluent English too.</p>
 <p>I am currently the Chief Solutions Evangelist &amp; Architect at <a href="https://www.hytrust.com">HyTrust</a> where I am responsible for evangelizing HyTrust's best-in-class data classification, security, and compliance solutions for worldwide, multi-cloud environments.  I attend many global and national industry events where I speak about security topics and how HyTrust solutions can help customers.</p>
-<p>This year (2019) I finally submitted my application and was accepted into the <a href="https://vexpert.vmware.com/">VMware vExpert Program</a>.</p>
+<p>Back in 2019 I finally submitted my application and was accepted into the <a href="https://vexpert.vmware.com/">VMware vExpert Program</a>.</p>
 <p><figure>
+    <img src="/img/about/VMware-vExpert-2020-badge.png"
+         alt="VMware vExpert 2020 Badge" height="100"/> 
+</figure>
+ <figure>
     <img src="/img/about/VMware-vExpert-badge.png"
          alt="VMware vExpert Badge" height="100"/> 
 </figure>
- You can find me over <a href="https://vexpert.vmware.com/directory/2085">here</a>.  I'm very proud of this distinction because I have been using VMware products/technologies and have spoken about them for many years.  <figure>
-    <img src="/img/about/VMware-vExpert-2019-badge.png"
-         alt="VMware vExpert 2019 Badge" height="100"/> 
-</figure>
-</p>
+  You can find me over <a href="https://vexpert.vmware.com/directory/2085">here</a>.  I'm very proud of this distinction because I have been using VMware products/technologies and have spoken about them for many years.</p>
 <p>It helped that I also got a gentle nudge from <a href="http://blogs.arielsanchezmora.com/">Ariel Sanchez</a>.  He was the one who really pushed me over the edge to do this.  Here is a video where Ariel interviewed me at a past Pittsburgh VMUG Usercon event.  Check it out:
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
