Updated About me page
Added the new vExpert badges

--- a/about/index.html
+++ b/about/index.html
@@ -231,13 +231,13 @@ if (!doNotTrack) {
 <h3 id="author">Author</h3>
 <p>I am originally from Pittsburgh, PA, but I now live in New England.  Despite living in New England, I can still speak native <a href="http://www.pittsburghese.com/">&ldquo;Pittsburghese&rdquo;</a>.  If you don&rsquo;t know what that means don&rsquo;t fret.  I speak fluent English too.</p>
 <p>I am currently the Chief Solutions Evangelist &amp; Architect at <a href="https://www.hytrust.com">HyTrust</a> where I am responsible for evangelizing HyTrust&rsquo;s best-in-class data classification, security, and compliance solutions for worldwide, multi-cloud environments.  I attend many global and national industry events where I speak about security topics and how HyTrust solutions can help customers.</p>
-<p>Back in 2019 I finally submitted my application and was accepted into the <a href="https://vexpert.vmware.com/">VMware vExpert Program</a>.</p>
+<p>Back in 2019 I finally submitted my application and was accepted into the <a href="https://vexpert.vmware.com/">VMware vExpert Program</a>.  This year my application was renewed again for the third year.  I&rsquo;m proud to be a vExpert.  Thank you VMUG Community.</p>
 <p><figure>
-    <img src="/img/about/VMware-vExpert-2020-badge.png"
-         alt="VMware vExpert 2020 Badge" height="100"/> 
+    <img src="/img/about/VMware-vExpert-2021-badge.png"
+         alt="VMware vExpert 2021 Badge" height="100"/> 
 </figure>
  <figure>
-    <img src="/img/about/VMware-vExpert-badge.png"
+    <img src="/img/about/VMware-vExpert-3yr-badge.png"
          alt="VMware vExpert Badge" height="100"/> 
 </figure>
   You can find me over <a href="https://vexpert.vmware.com/directory/2085">here</a>.  I&rsquo;m very proud of this distinction because I have been using VMware products/technologies and have spoken about them for many years.</p>
