Updated About page
I updated the About page with new vExpert info and removed references to HyTrust.

--- a/about/index.html
+++ b/about/index.html
@@ -214,29 +214,29 @@ if (!doNotTrack) {
             </div>
           </header>
           <div id="content">
-            <p>Welcome to my little piece of the Internet.  I blog here, but not as often as I like to.  But, please don&rsquo;t let that keep you from reading any further about me or my <a href="/">blog</a>.  I don&rsquo;t have comments enabled on my site.  So, please reach out to me on Twitter <a href="https://twitter.com/PSUStevens">@PSUStevens</a>.</p>
+            <p>Welcome to my little piece of the Internet.  I blog here, but not as often as I like to.  But, please don&rsquo;t let that keep you from reading any further about me or my <a href="/">blog</a>.  I don&rsquo;t have comments enabled on my site.  So, please reach out to me on <a href="https://twitter.com/PSUStevens">Twitter @PSUStevens</a>.</p>
 <hr>
 <h3 id="blog-topics">Blog Topics</h3>
 <p>This is a personal blog about technical topics that interest me.  The main topics are centered around virtualization, VMware ESXi and Microsoft Hyper-V.   Automation is also of interest to me.  This includes PowerShell, VMware PowerCLI (which is mainly PowerShell) and a smattering of Python.  I also still keep up on several Microsoft technologies, primarily Windows operating systems such as Windows 10, Windows Server and finally Active Directory, as that is how I got my start in the IT world.  I also reserve the right to throw in anything else that strikes my fancy, such as storage, backups, networking, etc.</p>
 <hr>
 <h3 id="author">Author</h3>
 <p>I am originally from Pittsburgh, PA, but I now live in New England.  Despite living in New England, I can still speak native <a href="http://www.pittsburghese.com/">&ldquo;Pittsburghese&rdquo;</a>.  If you don&rsquo;t know what that means don&rsquo;t fret.  I speak fluent English too.</p>
-<p>I am currently the Chief Solutions Evangelist &amp; Architect at <a href="https://www.hytrust.com">HyTrust</a> where I am responsible for evangelizing HyTrust&rsquo;s best-in-class data classification, security, and compliance solutions for worldwide, multi-cloud environments.  I attend many global and national industry events where I speak about security topics and how HyTrust solutions can help customers.</p>
-<p>Back in 2019 I finally submitted my application and was accepted into the <a href="https://vexpert.vmware.com/">VMware vExpert Program</a>.  This year my application was renewed again for the third year.  I&rsquo;m proud to be a vExpert.  Thank you VMUG Community.</p>
-<p><figure><img src="/img/about/VMware-vExpert-2021-badge.png"
-         alt="VMware vExpert 2021 Badge" height="100"/>
+<p>I am currently the Principal Technical Solutions Architect at <a href="https://www.entrust.com">Entrust</a> where I am responsible for evangelizing Entrust&rsquo;s best-in-class Public Key Infrastructure (PKI), identity, security, and compliance solutions for worldwide, multi-cloud environments.  I attend many global and national industry events where I speak about security topics and how Entrust solutions can help customers.</p>
+<p>Back in 2019 I finally got off my butt and submitted my application and was accepted into the <a href="https://vexpert.vmware.com/">VMware vExpert Program</a>.  This year my application was renewed again for the fifth straight year.  I&rsquo;m proud to be a vExpert.  Thank you VMware and the VMUG Community.</p>
+<p><figure><img src="/img/about/VMware-vExpert-2023-badge.png"
+         alt="VMware vExpert 2023 Badge" height="100"/>
 </figure>
- <figure><img src="/img/about/VMware-vExpert-3yr-badge.png"
+ <figure><img src="/img/about/VMware-vExpert-5yr-badge.png"
           alt="VMware vExpert Badge" height="100"/>
  </figure>
-  You can find me over <a href="https://vexpert.vmware.com/directory/2085">here</a>.  I&rsquo;m very proud of this distinction because I have been using VMware products/technologies and have spoken about them for many years.</p>
+  You can find me on the <a href="https://vexpert.vmware.com/directory/2085">vExpert directory</a>.  I&rsquo;m very proud of this distinction because I have been using VMware products/technologies and have spoken about them for many years.</p>
 <p>It helped that I also got a gentle nudge from <a href="http://blogs.arielsanchezmora.com/">Ariel Sanchez</a>.  He was the one who really pushed me over the edge to do this.  Here is a video where Ariel interviewed me at a past Pittsburgh VMUG Usercon event.  Check it out:
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/9u5BEroyVkk" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 </p>
-<p>I am finally getting around to learning how to use <a href="https://www.github.com">GitHub</a>.  In fact, this entire blog site is hosted on GitHub.  You can find my contributions <a href="https://github.com/psustevens">over here</a>.  I am using a framework known as <a href="https://github.com/gohugoio/hugo">Hugo</a> for developing my site.  I&rsquo;m using the <a href="https://github.com/pacollins/hugo-future-imperfect-slim">hugo-future-imperfect-slim</a> theme.</p>
+<p>I am finally getting around to learning how to use <a href="https://www.github.com">GitHub</a>.  In fact, this entire blog site is hosted on <a href="https://www.github.com">GitHub</a>.  You can find my contributions <a href="https://github.com/psustevens">over here</a>.  I am using a framework known as <a href="https://github.com/gohugoio/hugo">Hugo</a> for developing my site.  I&rsquo;m using the <a href="https://github.com/pacollins/hugo-future-imperfect-slim">hugo-future-imperfect-slim</a> theme.</p>
 <p>That&rsquo;s all for now.  I&rsquo;ll sprinkle a few more posts about myself in the future.</p>
 <p>Thanks for reading!</p>
 <blockquote>
